apps/qbittorrent/components/tls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: shikanime
spec:
  template:
    spec:
      containers:
        - name: qbittorrent
          volumeMounts:
            - name: tls
              mountPath: /tls
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: qbittorrent-tls
