apps/qbittorrent/components/tls/patch-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbittorrent
spec:
  template:
    spec:
      containers:
        - name: qbittorrent
          ports:
            - name: https
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: https
          livenessProbe:
            tcpSocket:
              port: https
          startupProbe:
            tcpSocket:
              port: https
          volumeMounts:
            - name: tls
              mountPath: /etc/ssl/private
              readOnly: true
      volumes:
        - name: tls
          secret:
            secretName: qbittorrent-tls
            items:
              - key: tls.crt
                path: tls.crt
              - key: tls.key
                path: tls.key
                mode: 0640
