apps/qbittorrent/components/tls/patch-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  ports:
    - name: https
      port: 8080
      targetPort: https
