apps/qbittorrent/components/tls/patch-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  defaultBackend:
    service:
      name: qbittorrent
      port:
        name: https
